@@ -5,6 +5,7 @@ Version 1.1.1
 - Add support for handling and uploading Proguard files to Sentry (for Android applications).
 - Cleanup thread local context in ``ThreadLocalContextManager`` after each servlet request finishes.
 - Change the ``EventBuilder`` hostname lookup code to only run one thread at a time.
+- Add ``ShouldSendEventCallback``, which can be added to each ``SentryClient`` instance.
 
 Version 1.1.0
 -------------
